--- a/index.html
+++ b/index.html
@@ -322,6 +322,122 @@
       </div>
     </section>
 
+    <!-- Book consultation Mobile View  -->
+    <section class="d-block d-md-none mx-4">
+      <div class="row mt-5">
+        <h1 class="fw-bold">Book a Consultation</h1>
+        <p id="greytext">
+          We provide expert advise on real estate at the convenience of your
+          mobile phone
+        </p>
+
+        <img
+          src="./assets/customer-service-agent-financial-advisor-call-center-employee-sits-desk-company.png"
+          class="img-fluid"
+          alt=""
+        />
+
+        <h1 class="fw-bold mt-5 w-50 mb-4">Book a Consultation</h1>
+        <ul style="list-style: none">
+          <li class="fw-bold">
+            <img
+              src="./assets/Vector(4).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Land / House Acquisition
+          </li>
+          <li class="fw-bold mt-4">
+            <img
+              src="./assets/Vector(2).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Workshop / Training
+          </li>
+          <li class="fw-bold mt-4">
+            <img
+              src="./assets/Vector(2).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Brokerage Services
+          </li>
+          <li class="fw-bold mt-4">
+            <img
+              src="./assets/Vector(2).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Event Hosting
+          </li>
+          <li class="fw-bold mt-4">
+            <div class="row">
+              <div class="col-2">
+                <img
+                  src="./assets/Vector(2).png"
+                  class="img-fluid circlegrey"
+                  alt=""
+                  style="width: 10px"
+                />
+              </div>
+              <div class="col-10" style="position: absolute; right: 10px">
+                Excursion of Public & Private Contract
+              </div>
+            </div>
+          </li>
+          <li class="fw-bold mt-5">
+            <img
+              src="./assets/Vector(2).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Land Title
+          </li>
+          <li class="fw-bold mt-4">
+            <img
+              src="./assets/Vector(2).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Construction/ Interior Design
+          </li>
+          <li class="fw-bold mt-4">
+            <img
+              src="./assets/Vector(2).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Taxes
+          </li>
+          <li class="fw-bold mt-4">
+            <img
+              src="./assets/Vector(2).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Listing / Selling / Partnership
+          </li>
+          <li class="fw-bold mt-4">
+            <img
+              src="./assets/Vector(2).png"
+              class="img-fluid me-4 circlegrey"
+              alt=""
+              style="width: 10px"
+            />
+            Business Plan
+          </li>
+        </ul>
+      </div>
+    </section>
     <!-- Bootstrap 5.3 JS  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
