--- a/index.html
+++ b/index.html
@@ -435,6 +435,9 @@
             />
             Business Plan
           </li>
+          <li class="fw-bold mt-4 text-center">
+            <button type="button" class="btn btngreen px-6">Consult</button>
+          </li>
         </ul>
       </div>
     </section>
