consultation larger screen

--- a/index.html
+++ b/index.html
@@ -441,6 +441,132 @@
         </ul>
       </div>
     </section>
+
+    <!-- Book consultation Larger View  -->
+    <section class="d-none d-md-block mx-6 mt-5">
+      <div class="row">
+        <div class="col-3">
+          <h1 class="fw-bold">Book a Consultation</h1>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-7">
+          <p id="greytext">
+            We provide expert advise on real estate at the convenience of your
+            mobile phone
+          </p>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-4">
+          <ul style="list-style: none">
+            <li class="fw-bold">
+              <img
+                src="./assets/Vector(4).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Land / House Acquisition
+            </li>
+            <li class="fw-bold mt-5">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Workshop / Training
+            </li>
+            <li class="fw-bold mt-5">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Brokerage Services
+            </li>
+            <li class="fw-bold mt-5">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Event Hosting
+            </li>
+            <li class="fw-bold mt-5">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid circlegrey me-4"
+                alt=""
+                style="width: 10px"
+              />
+
+              Excursion of Public & Private Contract
+            </li>
+          </ul>
+        </div>
+        <div class="col-4">
+          <ul style="list-style: none">
+            <li class="fw-bold">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Land Title
+            </li>
+            <li class="fw-bold mt-5">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Construction/ Interior Design
+            </li>
+            <li class="fw-bold mt-5">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Taxes
+            </li>
+            <li class="fw-bold mt-5">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Listing / Selling / Partnership
+            </li>
+            <li class="fw-bold mt-5">
+              <img
+                src="./assets/Vector(2).png"
+                class="img-fluid me-4 circlegrey"
+                alt=""
+                style="width: 10px"
+              />
+              Business Plan
+            </li>
+          </ul>
+        </div>
+        <div class="col-4">
+          <img
+            src="./assets/customer-service-agent-financial-advisor-call-center-employee-sits-desk-company.png"
+            class="rounded"
+            alt=""
+            style="width: 350px; position: relative; bottom: 20px; right: 80px"
+          />
+        </div>
+      </div>
+    </section>
     <!-- Bootstrap 5.3 JS  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
