--- a/index.html
+++ b/index.html
@@ -567,6 +567,91 @@
         </div>
       </div>
     </section>
+
+    <!-- Rectangle Section Mobile  -->
+    <section class="rectangle mt-5 pb-5">
+      <div class="row text-center pt-5">
+        <h2 class="fw-bold textgreen text-center">Explore Featured Agents</h2>
+        <p class="textgreen mt-2">
+          An agent is anyone who brings us buyers or property to sell. Register
+          with us as an agent, let's close deals and you get a fair commission.
+        </p>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <div class="card p-2 rounded-4 mx-5">
+            <img
+              src="./assets/IMG_E8401.png"
+              class="card-img-top rounded-4"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text textgreen fw-bold fs-3">Ashley Nkongho</p>
+              <p class="card-text text-muted fs-6">68 closed sales</p>
+              <p class="card-text text-black fw-bold fs-4">
+                5 years Experience
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-3 mt-4 mt-md-0">
+          <div class="card p-2 rounded-4 mx-5">
+            <img
+              src="./assets/molinge1.png"
+              class="card-img-top rounded-4"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text textgreen fw-bold fs-3">Molinge Henry</p>
+              <p class="card-text text-muted fs-6">105 closed sales</p>
+              <p class="card-text text-black fw-bold fs-4">
+                12 years Experience
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-3 mt-4 mt-md-0">
+          <div class="card p-2 rounded-4 mx-5">
+            <img
+              src="./assets/Marion5.png"
+              class="card-img-top rounded-4"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text textgreen fw-bold fs-3">Marion Ngwese</p>
+              <p class="card-text text-muted fs-6">62 closed sales</p>
+              <p class="card-text text-black fw-bold fs-4">
+                5 years Experience
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-3 mt-4 mt-md-0">
+          <div class="card p-2 rounded-4 mx-5">
+            <img
+              src="./assets/WhatsAppImage2022-08-25at10.201.png"
+              class="card-img-top rounded-4"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text textgreen fw-bold fs-3">Deresy Ndinde</p>
+              <p class="card-text text-muted fs-6">41 closed sales</p>
+              <p class="card-text text-black fw-bold fs-4">
+                4 years Experience
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-5">
+          <button type="submit" class="btn btngreen text-center p-md-3">
+            Register as an Agent
+          </button>
+        </div>
+      </div>
+    </section>
     <!-- Bootstrap 5.3 JS  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
