--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <!-- Services mobile view  -->
     <section class="d-block d-md-none sectionmobile mt-5">
-      <div class="row px-3">
+      <div class="row px-3 py-3 py-md-0">
         <div class="col-6">
           <div class="card bggreen">
             <div class="card-body">
@@ -206,7 +206,7 @@
         </div>
       </div>
 
-      <div class="row px-3 mt-4">
+      <div class="row px-3 mt-4 pb-3 pb-md-0">
         <div class="col-6">
           <div class="card bggreen">
             <div class="card-body">
@@ -568,7 +568,7 @@
       </div>
     </section>
 
-    <!-- Rectangle Section Mobile  -->
+    <!-- Rectangle Section  -->
     <section class="rectangle mt-5 pb-5">
       <div class="row text-center pt-5">
         <h2 class="fw-bold textgreen text-center">Explore Featured Agents</h2>
