--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <!-- Navigation Bar  -->
-    <nav class="navbar navbar-expand-lg bg-white py-md-3">
+    <nav class="navbar navbar-expand-lg bg-white py-md-3 fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand pe-md-5" href="#"
           ><img
